# bite

./: .gitignore  .gitmodules  Cargo.toml  build.rs  ci.sh  readme.md
c_src/: bash.patch  myCreateIC.c
doc/: architecture.md  architecture.pu  design.md  parser.md  xterm-test.md
src/: commandline.rs  execute.rs  gui.rs  main.rs  polling.rs  runeline.rs  versioned_file.rs
src/bash/: mod.rs  parser.rs  prompt_parser.rs
src/model/: bash.rs  completion.rs  control_sequence.rs  conversation.rs  emulator.rs  error.rs  execute.rs  history.rs  interaction.rs  iterators.rs  job.rs  line.rs  mod.rs  response.rs  screen.rs  session.rs  types.rs  variables.rs  vt_parse_table.rs
src/model/bash/: execute.rs  expansion_parser.rs  history.rs  mod.rs  prompt_parser.rs  script_parser.rs  special_builtins.rs
src/model/bash/builtins/: cd.rs  export.rs  mod.rs  readonly.rs
src/model/control_sequence/: action.rs  mod.rs  parameter.rs  parser.rs  types.rs  vt_parse_table.rs
src/model/interpreter/: byte_code.rs  data_stack.rs  grammar.rs  history.rs  jobs.rs  mod.rs  parser.rs  variables.rs
src/model/interpreter/builtins/: change_dir.rs  mod.rs
src/model/screen/: charset.rs  mod.rs  test.rs
src/model/session/: conversation.rs  interaction.rs  lineitem.rs  locator.rs  mod.rs  response.rs  test.rs
src/presenter/: completion.rs  completions.rs  compose_command.rs  display_line.rs  execute_command.rs  history.rs  mod.rs  runeline.rs  style_sheet.rs  test.rs  textinput.rs  tui.rs
src/presenter/compose_command/: bubble_above.rs  bubble_exclusive.rs  live_parse.rs  markov_below.rs  mod.rs
src/session/: conversation.rs  history.rs  interaction.rs  iterators.rs  mod.rs  response.rs
src/tools/: commandline.rs  logging.rs  mod.rs  polling.rs  prng.rs  shared_item.rs  versioned_file.rs
src/view/: colors.rs  mod.rs
test_scripts/: here_document.sh  prog_err.sh  progress.sh  scroll_region.sh  slow_stdout.sh  tui.sh
xterm_test_bite/: generate.py
