[package]
name = "bite"
version = "0.9.1"
description = "Bash-integrated Terminal Editor"
authors = ["Lars Krueger <lars_e_krueger@gmx.de>"]
license = "GPL-3.0-or-later"
build="build.rs"
publish = false
repository = "https://github.com/LarsEKrueger/bite.git"
readme = "readme.md"
keywords = [ "bash", "shell", "terminal-emulators", "gui" ]
categories = [ "gui", "development-tools" ]

[dependencies]
argparse = "0.2.1"
libc = "0.2.34"
time = "0.1"
cstr = "0.1"
cstr-macros = "0.1"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
boolinator = "2.4.0"
lazy_static = "1.0.0"
glob = "0.3.0"
nix = "0.17.0"
bitflags = "1.0.3"
backtrace = "0.2"
log = "0.4.0"
flexi_logger = "=0.10.2"
termios = "0.3.1"
term = "0.6.1"
nom_locate = "1.0.0"
qptrie="0.2.4"
itertools = "0.8.2"

[dev-dependencies]
pretty_assertions = "0.5.1"

[dependencies.nom]
version = "5.1.0"

[dependencies.x11]
version = "2.17.2"
default-features = false 
features = ["xlib"]

[build-dependencies]
gcc = "0.3"
rustc_version = "0.2"
