[package]
name = "bite"
version = "0.12.0"
description = "Bash-integrated Terminal Editor"
authors = ["Lars Krueger <lars_e_krueger@gmx.de>"]
license = "GPL-3.0-or-later"
build="build.rs"
publish = false
repository = "https://github.com/LarsEKrueger/bite.git"
readme = "readme.md"
keywords = [ "bash", "shell", "terminal-emulators", "gui" ]
categories = [ "gui", "development-tools" ]

[dependencies]
argparse = "0.2.1"
libc = "0.2.34"
time = "0.2"
cstr = "0.2.10"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
boolinator = "2.4.0"
lazy_static = "1.4.0"
glob = "0.3.0"
nix = "0.20.2"
bitflags = "1.0.3"
backtrace = "0.2"
log = "0.4.0"
flexi_logger = "=0.10.2"
termios = "0.3.1"
term = "0.6.1"
nom = "7.1.0"
nom_locate = "4.0.0"
qptrie="0.2.4"
itertools = "0.8.2"

[dev-dependencies]
pretty_assertions = "0.5.1"

[dependencies.sesd]
path = "sesd"

[dependencies.x11]
version = "2.17.2"
default-features = false
features = ["xlib"]

[build-dependencies]
cc = "1.0"
rustc_version = "0.2"
